--- a/example/cruise-control/kafka-rebalance.yaml
+++ b/example/cruise-control/kafka-rebalance.yaml
@@ -2,6 +2,7 @@ apiVersion: kafka.strimzi.io/v1alpha1
 kind: KafkaRebalance
 metadata:
   name: my-rebalance
+  namespace: kafka
   labels:
     strimzi.io/cluster: my-cluster
 # no goals specified, using the default goals from the Cruise Control configuration
