--- a/helm/strimzi-kafka-operator-app/Chart.yaml
+++ b/helm/strimzi-kafka-operator-app/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 appVersion: 0.19.0
 description: A Helm chart for the strimzi-kafka-operator-app
 home: https://github.com/giantswarm/strimzi-kafka-operator-app
-icon: https://raw.githubusercontent.com/strimzi/strimzi-kafka-operator/master/documentation/logo/strimzi_logo.png
+icon: https://s.giantswarm.io/app-icons/1/png/strimzi-kafka-operator-app-light.png
 name: strimzi-kafka-operator-app
 namespace: kube-system
 version: [[ .Version ]]
