push the operator to the Giant Swarm Catalog

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,9 @@ workflows:
     jobs:
       - architect/push-to-app-catalog:
           context: "architect"
-          name: push-to-playground-app-catalog
-          app_catalog: "giantswarm-playground-catalog"
-          app_catalog_test: "giantswarm-playground-test-catalog"
+          name: push-to-app-catalog
+          app_catalog: "giantswarm-catalog"
+          app_catalog_test: "giantswarm-test-catalog"
           chart: "strimzi-kafka-operator-app"
           # Trigger job on git tag.
           filters:
