--- a/helm/strimzi-kafka-operator-app/Chart.yaml
+++ b/helm/strimzi-kafka-operator-app/Chart.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 appVersion: 0.21.1
 description: A Helm chart for the strimzi-kafka-operator-app
 home: https://github.com/giantswarm/strimzi-kafka-operator-app
-icon: https://s.giantswarm.io/app-icons/1/png/strimzi-kafka-operator-app-light.png
+icon: https://s.giantswarm.io/app-icons/strimzi-kafka-operator/1/light.svg
 name: strimzi-kafka-operator-app
 namespace: kube-system
 version: [[ .Version ]]
